<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cliente_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/cliente_textView_id"
            android:layout_width="202dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/clientes_editText_id"
            app:layout_constraintStart_toEndOf="@+id/cliente_imageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cliente_textView_nombre"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/clientes_editText_nombre"
            app:layout_constraintStart_toEndOf="@+id/cliente_imageButton"
            app:layout_constraintTop_toBottomOf="@+id/cliente_textView_id" />

        <TextView
            android:id="@+id/cliente_textView_telefono"
            android:layout_width="198dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/clientes_editText_telefono"
            app:layout_constraintStart_toEndOf="@+id/cliente_imageButton"
            app:layout_constraintTop_toBottomOf="@+id/cliente_textView_nombre" />

    <ImageButton
        android:id="@+id/cliente_imageButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher_round" />
    </android.support.constraint.ConstraintLayout>
</RelativeLayout>